# Linux-Perms-Manager-and-Viewer

./: .gitignore  AppImageBuilder.yml  Cargo.toml  DEV-PLAN.md  README.md  changelog.md
crates/perms-core/: Cargo.toml
crates/perms-core/src/: lib.rs
crates/perms-core/src/domain/: acl.rs  group.rs  mod.rs  path_entry.rs  permission.rs  user.rs  userdb.rs
crates/perms-core/src/engine/: effective_access.rs  explainer.rs  mod.rs  scanner.rs  ssh_review.rs  system_actions.rs
crates/perms-core/src/engine/audit/: mod.rs  rules.rs
crates/perms-core/src/export/: mod.rs
crates/perms-core/src/ipc/: mod.rs
crates/perms-core/src/store/: mod.rs  schema_v1.sql
crates/perms-helper/: Cargo.toml
crates/perms-helper/src/: main.rs
crates/perms-ui/: Cargo.toml
crates/perms-ui/resources/: style.css
crates/perms-ui/src/: app_state.rs  main.rs
crates/perms-ui/src/components/: detail_panel.rs  mod.rs  perm_badge.rs
crates/perms-ui/src/model/: mod.rs  path_object.rs  user_object.rs
crates/perms-ui/src/tabs/: mod.rs  settings_tab.rs
crates/perms-ui/src/tabs/dashboard/: mod.rs  report_window.rs  widgets.rs
crates/perms-ui/src/tabs/management/: mod.rs
crates/perms-ui/src/tabs/viewer/: directory_view.rs  group_view.rs  mod.rs  ssh_view.rs  user_view.rs
packaging/: PKGBUILD  org.perms.app.desktop  org.perms.app.metainfo.xml  org.perms.app.yml  org.perms.helper.policy
scripts/: release.sh  update-version.sh
