[workspace]
members = [
    "crates/perms-core",
    "crates/perms-ui",
    "crates/perms-helper",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Gamedirection"]
license = "MIT"

[workspace.dependencies]
# Shared across crates — pin versions here, reference with { workspace = true }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
nix = { version = "0.30", features = ["fs", "user"] }
walkdir = "2"
csv = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
rust_xlsxwriter = "0"
