[package]
name = "perms-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
nix = { workspace = true }
walkdir = { workspace = true }
csv = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
