[package]
name = "perms-helper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
perms-core = { path = "../perms-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { workspace = true }
tokio = { workspace = true }
